<resources>
    <string name="app_name">Content Aware Resizing</string>

    <!-- Fragment Gallery List -->
    <string name="fragment_gallery_list_create_button_title">Create from gallery</string>
    <string name="fragment_gallery_list_shared_transition_name">gallery_list_item_shared_transition_%s</string>

    <!-- Activity Editor -->
    <string name="activity_editor_select_header">Pick the image</string>
    <string name="activity_editor_select_photo_from_gallery">Gallery</string>
    <string name="activity_editor_select_photo_from_camera">Camera</string>

    <string name="activity_editor_save_button">Save</string>
    <string name="activity_editor_reset_button">Reset</string>

    <!-- Fragment Editor Options Home -->
    <string name="fragment_editor_options_home_menu_brush">Brush</string>
    <string name="fragment_editor_options_home_menu_target_aspect_ratio">Dimensions</string>
    <string name="fragment_editor_options_home_menu_resize_modes">Resize</string>
    <string name="fragment_editor_options_home_menu_quality_modes">Quality</string>
    <string name="fragment_editor_options_home_menu_reset">Reset</string>
    <string name="fragment_editor_options_home_menu_accept">Apply</string>

    <!-- Fragment Editor Brush -->
    <string name="fragment_editor_brush_keep">Keep</string>
    <string name="fragment_editor_brush_remove">Remove</string>
    <string name="fragment_editor_brush_erase">Erase</string>

    <!-- Fragment Editor Resize Modes -->
    <string name="fragment_editor_resize_mode_keep">Keep</string>
    <string name="fragment_editor_resize_mode_retarget">Retarget</string>

    <!-- Fragment Editor Quality -->
    <string name="fragment_editor_quality_modes_fidelity">Fidelity</string>
    <string name="fragment_editor_quality_modes_speed">Speed</string>

    <!-- Fragment Gallery Detailed -->
    <string name="fragment_gallery_detailed_share_button">Share</string>
    <string name="fragment_gallery_detailed_remove_button">Remove</string>
</resources>