<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/editor_content_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        style="@style/Widget.Material3.CardView.Filled"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="24dp"
        app:cardCornerRadius="32dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/content_empty_editor" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/background_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <st235.com.github.seamcarving.presentation.components.EditorView
                android:id="@+id/editor_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/pickers_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/activity_editor_select_header"
        android:textColor="?attr/colorOnSurface"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/card_view"
        app:layout_constraintTop_toBottomOf="@id/card_view" />

    <Button
        android:id="@+id/camera_picker_image_button"
        style="@style/Widget.Material3.Button.TonalButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/activity_editor_select_photo_from_camera"
        app:icon="@drawable/ic_two_tone_camera"
        app:layout_constraintEnd_toStartOf="@id/gallery_picker_image_button"
        app:layout_constraintStart_toStartOf="@id/card_view"
        app:layout_constraintTop_toBottomOf="@id/pickers_header" />

    <Button
        android:id="@+id/gallery_picker_image_button"
        style="@style/Widget.Material3.Button.TonalButton.Icon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/activity_editor_select_photo_from_gallery"
        app:icon="@drawable/ic_two_tone_photo"
        app:layout_constraintEnd_toEndOf="@id/card_view"
        app:layout_constraintStart_toEndOf="@id/camera_picker_image_button"
        app:layout_constraintTop_toBottomOf="@id/pickers_header" />

</androidx.constraintlayout.widget.ConstraintLayout>